[package]
name = "axum-negotiate-layer"
version = "0.2.1"
edition = "2024"
resolver = "2"
authors = ["Niclas Klugmann <niclas@klugmann.de>"]
description = "Negotiate HTTP layer library for axum."
repository = "https://github.com/2ndDerivative/axum-negotiate-layer"
readme = "README.md"
documentation = "https://docs.rs/axum-negotiate-layer"
license = "MIT"
keywords = ["authentication", "kerberos", "ntlm", "gssapi", "axum"]

[dependencies]
axum = { version = "0.8", optional = true, default-features = false, features = ["tokio"] }
base64 = "0.22.1"
futures-util = { version = "0.3.31", default-features = false }
tokio = { version = "1.42.0", default-features = false, optional = true, features = ["net"] }
tower = { version = "0.5.2", default-features = false }
kenobi = {version ="0.1.1", git = "https://github.com/2ndDerivative/kenobi", branch = "impersonate" }
http = "1.3.1"
axum-core = "0.5.2"

[features]
default = ["http1"]
http1 = ["dep:axum", "axum/http1", "tokio"]
http2 = ["dep:axum", "axum/http2", "tokio"]

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"]}
