[package]
name = "axum-negotiate-layer"
version = "0.2.1"
edition = "2024"
resolver = "2"
authors = ["Niclas Klugmann <niclas@klugmann.de>"]
description = "Negotiate HTTP layer library for axum."
repository = "https://github.com/2ndDerivative/axum-negotiate-layer"
readme = "README.md"
documentation = "https://docs.rs/axum-negotiate-layer"
license = "MIT"
keywords = ["authentication", "kerberos", "ntlm", "gssapi", "axum"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio"] }
base64 = "0.22.1"
futures-util = { version = "0.3.31", default-features = false }
tokio = { version = "1.42.0", default-features = false, optional = true, features = ["net"] }
tower = { version = "0.5.2", default-features = false }
tracing = { version = "0.1.41", optional = true }
http = "1.3.1"
axum-core = "0.5.2"
cross-krb5 = { version = "0.4.2", registry = "heggemann", default-features = false }

[features]
default = ["http1"]
http1 = ["axum/http1", "tokio"]
http2 = ["axum/http2", "tokio"]
tracing = ["dep:tracing"]

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"]}
